--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  scroll-behavior: smooth; /* 상하 움직임 style */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box; /* 앞으로 생성될 웹 페이지의 박스모델의 default style */
+}
+
+body {
+  background-color: #040714; /* background 색 */
+
+  /* content style 구간 */
+  color: rgba(255, 255, 255, 0.896); /* content 색 */
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0px;
+  padding: 0px;
+}
+
+a {
+  color: rgba(255, 255, 255, 0.896);
+  text-decoration: none;
+}
+
+@media only screen and (mid-width: 768px) {
+  body{
+    font-size: 16px;
+  }
+}
+
+@media only screen and (mid-width: 480px) and (mid-width: 768px) {
+  body{
+    font-size: 15px;
+  }
+}
+
+@media only screen and (mid-width: 479px) {
+  body{
+    font-size: 14px;
+  }
 }
